--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>宠物网站演示</title>
+    <title>线上博物馆</title>
       <link rel="stylesheet" href="https://cdn.staticfile.org/ant-design-vue/3.2.20/antd.min.css">
       <script src="https://cdn.staticfile.org/echarts/4.3.0/echarts.min.js" ></script>
   </head>
